# short_example_PFA

./: README.md
foot_sim-20260701T151204Z-3-001/foot_sim/: footbot_diffusion.cpp
foot_sim-20260701T151204Z-3-001/foot_sim/argos3-examples/: CMakeLists.txt  footbot_diffusion_patch.diff
foot_sim-20260701T151204Z-3-001/foot_sim/argos3-examples/experiments/: diffusion_1.argos
